--- a/Nodepop/views/header.html
+++ b/Nodepop/views/header.html
@@ -1,1 +1,12 @@
-<h1>Cabecera</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title><%= title %> - Home</title>
+
+   <!--  <link rel="stylesheet" href="stylesheets/style.css" /> -->
+    <link rel="stylesheet" href="./css/bootstrap.min.css" />
+  </head>
+  <body>
+      <%- include navbar.html%> 
