--- a/Nodepop/views/index.html
+++ b/Nodepop/views/index.html
@@ -1,25 +1,37 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel="stylesheet" href="/stylesheets/style.css" />
-  </head>
-  <body>
-    <% include header.html %>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+<%- include header.html%>
+<div>
+  <h2><%= description %> </h2>
 
-    <h2>Conditions</h2>
-    <% if (condition.state) { %>
-    <p><%= condition.second %> is pair</p>
-    <% } else { %>
-    <p><%= condition.second %> is odd</p>
-    <% } %>
+  <div class="container">
 
-    <h2>Bucles - Adverts</h2>
-    <% adverts.forEach(advert => { %>
-    <p><%= advert.id %></p>
-    <p><%= advert.name %></p>
-    <% }) %>
-  </body>
-</html>
+    <table class="table table-bordered table-dark">
+      <thead>
+        <tr>
+          <th scope="col">_id</th>
+          <th scope="col">Name</th>
+          <th scope="col">Onsale</th>
+          <th scope="col">Price</th>
+          <th scope="col">Photo</th>
+        </tr>
+      </thead>
+      <tbody>
+
+        <% if (arrayAdvertsDB.length > 0) { %>
+          <% arrayAdvertsDB.forEach(advert => { %>
+            <tr>
+              <th scope="row"><%= advert._id %> </th>
+              <td><%= advert.name %></td>
+              <td><%= advert.onsale %></td>
+              <td><%= advert.price %></td>
+              <td><%= advert.photo %></td>
+            </tr>
+          <% }) %>
+         <% } %>
+
+      </tbody>
+    </table>
+
+
+</div>
+
+<%- include footer.html %>
