--- a/Nodepop/views/header.html
+++ b/Nodepop/views/header.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%= title %> - Home</title>
+    <title><%= title %></title>
+    <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/bootstrap.min.css" />
   </head>
   <body>
