--- a/Nodepop/views/navbar.html
+++ b/Nodepop/views/navbar.html
@@ -1,6 +1,6 @@
 <!-- Image and text -->
 <nav class="navbar navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">
+  <a class="navbar-brand" href="index.html">
     <img
       src="assets/nodepop.png"
       width="30"
@@ -9,6 +9,5 @@
       alt=""
       loading="lazy"
     />
-    API REST - Nodepop
   </a>
 </nav>
