Fix adverts views

--- a/Nodepop/views/adverts.html
+++ b/Nodepop/views/adverts.html
@@ -24,18 +24,36 @@
               <td><%= advert.name %></td>
               <td><%= advert.onsale %></td>
               <td><%= advert.price %></td>
-              <td><%= advert.photo %></td>
+              <td><img src="images/<%=advert.photo %>"></td>
             </tr>
           <% }) %>
          <% } %>
-
       </tbody>
     </table>
 </div>
 
-<form action="">
-
-</form>
-
+<div>
+  <h4>These are some examples:</h4>
+  <ul>
+    <li>
+      <a href="?sort=price">Ordered from lowest to highest price.</a>
+    </li>
+    <li>
+      <a href="?sort=name">Results in alphabetical order.</a>
+    </li>
+    <li>
+      <a href="?price=-1000">Articles with prices less than 1000.</a>
+    </li>
+    <li>
+      <a href="?price=1000-">Articles with prices over 1000.</a>
+    </li>
+    <li>
+      <a href="?price=5000">All results with a price equal to 5000.</a>
+    </li>
+    <li>
+      <a href="?tag=lifestyle">All results with the tag  "lifestyle".</a>
+    </li>
+  </ul>
+</div>
 
 <%- include footer.html %>
